dev/base.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: clase
  name: clase
  namespace: dev
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: clase
  template: 
    metadata: 
      labels: 
        app: clase
    spec: 
      containers: 
        - image: k8scursolite.azurecr.io/micro-docker:1.3
          imagePullPolicy: Always
          name: clase
          ports: 
            - containerPort: 8080
      restartPolicy: Always
