dev/base2.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  labels: 
    app: clase
  name: clase
  namespace: dev
spec: 
  replicas: 1
  selector: 
    matchLabels: 
      app: clase
  template: 
    metadata: 
      labels: 
        app: clase
    spec: 
      containers: 
        - image: k8scursolite.azurecr.io/micro-docker:1.3
          imagePullPolicy: Always
          name: clase
          ports: 
            - containerPort: 8080
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
            periodSeconds: 3
            initialDelaySeconds: 35
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
            periodSeconds: 3
            initialDelaySeconds: 31
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 900m
              memory: 512Mi
      restartPolicy: Always
