dev/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
  labels: 
    app: st-clase
  name: st-clase
  namespace: dev
spec: 
  replicas: 1
  serviceName: st-clase
  selector: 
    matchLabels: 
      app: st-clase
  template: 
    metadata: 
      labels: 
        app: st-clase
    spec: 
      containers: 
        - image: k8scursolite.azurecr.io/micro-docker:1.3
          imagePullPolicy: Always
          name: st-clase
          ports: 
            - containerPort: 8080
      restartPolicy: Always
