dev/service.yml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: sv-clase
  name: sv-clase
  namespace: dev
spec:
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 9090
  selector:
    app: clase
  type: LoadBalancer
